--- a/public/default.html
+++ b/public/default.html
@@ -4,10 +4,8 @@
 
   <h1> Spike Analytics Web </h1>
 
-  <a href='data.html'>data</a>
-
-  <a href='history.html'>release data</a>
-
+ <p>  <a href='data.html'>data</a>  </p>
+ <p>  <a href='history.html'>release datatabase</a> Descriptive Info, All past Releases, StdDev for Signal Generation <p>
 </body>
 
 </html>
