--- a/public/history.html
+++ b/public/history.html
@@ -20,6 +20,7 @@
     <p> {{desc.ReleaseName}} ( {{desc.BloombergID}} ) Significance: {{desc.Significance}} Release Time: {{desc.ReleaseTime}} - {{desc.Country}} {{desc.LocalTimeZone}}</p>
     <p> Frequency: {{desc.Frequency}} Units: {{desc.QuoteUnits}}  Source: {{desc.Source}} Begin: {{desc.Begin}}</p>
     <p>{{desc.Description}} </p>
+    <p> StdDev for Signal Estimation: {{desc.StdDev}} </p>
     <table class="table table-striped">
       <thead>
         <tr>
