pivot table analysis added

--- a/public/default.html
+++ b/public/default.html
@@ -4,8 +4,10 @@
 
   <h1> Spike Analytics Web </h1>
 
- <p>  <a href='data.html'>data</a>  </p>
  <p>  <a href='history.html'>release datatabase</a> Descriptive Info, All past Releases, StdDev for Signal Generation <p>
+ <p>  <a href='pivot.html'>pivot analysis</a> How many pips have currency pairs moved for the release you want to trade? </p>   
+ <p>  <a href='data.html'>data</a> Spike Charts </p>
+
 </body>
 
 </html>
